--- a/.github/workflows/release-tags.yml
+++ b/.github/workflows/release-tags.yml
@@ -11,9 +11,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      MAVEN_DEPLOY_USER: ${{ secrets.MAVEN_DEPLOY_USER }}
-      MAVEN_DEPLOY_PASSWORD: ${{ secrets.MAVEN_DEPLOY_PASSWORD }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -47,5 +44,8 @@ jobs:
           title: "${{ env.RELEASE_VERSION }}"
           files: build/libs/*.jar
 
-      - name: Publish to maven
+      - name: Publish to Maven
         run: ./gradlew publish
+        env:
+          MAVEN_USER: ${{ secrets.MAVEN_DEPLOY_USER }}
+          MAVEN_PASSWORD: ${{ secrets.MAVEN_DEPLOY_PASSWORD }}
