--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-//version: 1656003793falsepattern27
+//version: 1656003793falsepattern28
 /*
 DO NOT CHANGE THIS FILE!
 
@@ -616,14 +616,16 @@ def getMavenSettingsCredentials = {
 def getCredentials = {
     String username = System.getenv("MAVEN_DEPLOY_USER")
     String password = System.getenv("MAVEN_DEPLOY_PASSWORD")
-    if (username == null || password == null) {
-        def entries = getMavenSettingsCredentials()
-        for (entry in entries) {
-            if (entry."id".text() == repositoryName) {
-                return [username: entry.username.text(), password: entry.password.text()]
+    if (username == null) {
+        try {
+            def entries = getMavenSettingsCredentials()
+            for (entry in entries) {
+                if (entry."id".text() == repositoryName) {
+                    return [username: entry.username.text(), password: entry.password.text()]
+                }
             }
-        }
-        return [username: null, password: null]
+        } catch (Exception ignored){}
+        return [username: "none", password: "none"]
     } else {
         return [username: username, password: password]
     }
@@ -708,7 +710,7 @@ boolean performBuildScriptUpdate(String projectDir) {
     if (isNewBuildScriptVersionAvailable(projectDir)) {
         def buildscriptFile = getFile("build.gradle")
         availableBuildScriptUrl().withInputStream { i -> buildscriptFile.withOutputStream { it << i } }
-        out.style(Style.Success).print("Build script updated. Please REIMPORT the project or RESTART your IDE!")
+        out.println("Build script updated. Please REIMPORT the project or RESTART your IDE!")
         return true
     }
     return false
