--- a/repositories.gradle
+++ b/repositories.gradle
@@ -3,10 +3,10 @@
 repositories {
     maven {
         name = "gtmega"
-        url = "https://gtmega.falsepattern.com/"
+        url = "https://mvn.falsepattern.com/gtmega_releases"
     }
     maven {
         name = "mavenpattern"
-        url = "https://maven.falsepattern.com/"
+        url = "https://mvn.falsepattern.com/releases"
     }
 }
