--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -5,10 +5,10 @@ dependencies {
         transitive = false
     }
     annotationProcessor("org.projectlombok:lombok:1.18.22")
-    compileOnly("gtmega:gt5u:5.28.18-gtmega:dev") {
+    compileOnly("gtmega:gt5u-mc1.7.10:5.28.23-gtmega:dev") {
         // Only get GT5U and not its dependencies, since it won't be run in dev. It is an optional dependency
         transitive = false
     }
 
-    compile("com.falsepattern:falsepatternlib-mc1.7.10:0.5.0:dev")
+    compile("com.falsepattern:falsepatternlib-mc1.7.10:0.10.0:dev")
 }
