--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-//version: 1656003793falsepattern34
+//version: 1656003793falsepattern35
 /*
 DO NOT CHANGE THIS FILE!
 
@@ -657,9 +657,7 @@ publishing {
     publications {
         maven(MavenPublication) {
             from components.java
-            if(usesShadowedDependencies.toBoolean()) {
-                artifact source: shadowJar, classifier: ""
-            }
+            artifact source: usesShadowedDependencies.toBoolean() ? shadowJar : jar, classifier: ""
             artifact source: sourcesJar, classifier: "sources"
             artifact source: usesShadowedDependencies.toBoolean() ? shadowDevJar : devJar, classifier: "dev"
             if (apiPackage) {
