--- a/.github/workflows/release-tags.yml
+++ b/.github/workflows/release-tags.yml
@@ -44,8 +44,10 @@ jobs:
           title: "${{ env.RELEASE_VERSION }}"
           files: build/libs/*.jar
 
-      - name: Publish to Maven
+      - name: Publish to Maven, Modrinth, and CurseForge
         run: ./gradlew publish
         env:
           MAVEN_DEPLOY_USER: ${{ secrets.MAVEN_DEPLOY_USER }}
           MAVEN_DEPLOY_PASSWORD: ${{ secrets.MAVEN_DEPLOY_PASSWORD }}
+          MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
+          CURSEFORGE_TOKEN: ${{ secrets.CURSEFORGE_TOKEN }}
