[ci skip] fix incorrect task binding

--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-//version: 1656003793falsepattern38
+//version: 1656003793falsepattern39
 /*
 DO NOT CHANGE THIS FILE!
 
@@ -749,7 +749,7 @@ if (curseForgeProjectId != "") {
         }
     }
     tasks.curseforge.dependsOn(build)
-    tasks.publish.dependsOn(curseforge)
+    tasks.publish.dependsOn(tasks.curseforge)
 }
 
 if (modrinthProjectId != "") {
@@ -779,7 +779,7 @@ if (modrinthProjectId != "") {
         }
     }
     tasks.modrinth.dependsOn(build)
-    tasks.publish.dependsOn(modrinth)
+    tasks.publish.dependsOn(tasks.modrinth)
 }
 
 def addModrinthDep(scope, type, name) {
