--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-//version: 1656003793falsepattern39
+//version: 1656003793falsepattern40
 /*
 DO NOT CHANGE THIS FILE!
 
@@ -727,6 +727,7 @@ if (curseForgeProjectId != "") {
             changelog = project.changelog.replace("{version}", modVersion)
             releaseType = modVersion.contains("-a") ? "alpha" : modVersion.contains("-b") ? "beta" : "release"
             addGameVersion project.minecraft.version
+            addGameVersion "Forge"
             mainArtifact(jar) {
                 displayName = "$modName version: $modVersion"
             }
