--- a/gradle.properties
+++ b/gradle.properties
@@ -71,7 +71,8 @@ modrinthProjectId =
 # Where scope can be one of [required, optional, incompatible, embedded],
 #       type can be one of [project, version],
 #       and the name is the Modrinth project or version slug/id of the other mod.
-# Example: required-project:fplib;optional-project:gasstation;incompatible-project:gregtech
+# Example: required-project:fplib;incompatible-project:gregtech
+# Note: GasStation is automatically set as a required dependency if usesMixins = true
 modrinthDependencies =
 
 #endregion modrinth
@@ -90,6 +91,7 @@ curseForgeProjectId =
 # Where type can be one of [requiredDependency, embeddedLibrary, optionalDependency, tool, incompatible],
 #       and the name is the CurseForge project id of the other mod.
 # Example: requiredDependency:railcraft;embeddedLibrary:cofhlib;incompatible:buildcraft
+# Note: GasStation is automatically set as a required dependency if usesMixins = true
 curseForgeRelations =
 
 #endregion curseforge
@@ -97,7 +99,10 @@ curseForgeRelations =
 # This will be inserted as the changelog text in the Modrinth/CurseForge publications.
 # If the text contains "{version}", it will be replaced with the current mod version. This is useful when the changelog
 # is just a URL pointing to a GitHub release tag.
-# If left empty, the changelog text will be set to "No changelog URL was provided."
+# If left empty, the changelog will be attempted to be read from the file at the CHANGELOG_FILE environment variable,
+# or the CHANGELOG.md file in the project root if the variable is not set.
+# If neither this property, nor the file, nor the environment variable (or the file it points to) exist, the changelog
+# will be set to "No changelog was provided.".
 # Example: https://github.com/myname/mymod/releases/tag/{version}
 changelog =
 
