--- a/gradle.properties
+++ b/gradle.properties
@@ -126,6 +126,7 @@ skipBuildScriptUpdateCheck = false
 # The string's content will be replaced with your mods version when compiled. You should use this to specify your mod's
 # version in @Mod([...], version = VERSION, [...])
 # Leave these properties empty to skip individual token replacements
+# Multiple source files can be defined here by providing a comma-seperated list: Class1.java,Class2.java,Class3.java
 replaceGradleTokenInFile = Tags.java
 gradleTokenModId = GRADLETOKEN_MODID
 gradleTokenModName = GRADLETOKEN_MODNAME
