--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-//version: 1656003793falsepattern58
+//version: 1656003793falsepattern59
 /*
 DO NOT CHANGE THIS FILE!
 
@@ -319,6 +319,12 @@ dependencies {
         runtime("org.spongepowered:mixin:0.8.5-gasstation_7")
         runtime("com.falsepattern:00gasstation-mc1.7.10:0.5.1:dev")
     }
+    // Latest LWJGL
+    compile "org.lwjgl.lwjgl:lwjgl:2.9.4-nightly-20150209"
+    compile "org.lwjgl.lwjgl:lwjgl_util:2.9.4-nightly-20150209"
+    minecraftNatives "org.lwjgl.lwjgl:lwjgl-platform:2.9.4-nightly-20150209"
+    minecraftDeps "org.lwjgl.lwjgl:lwjgl:2.9.4-nightly-20150209"
+    minecraftDeps "org.lwjgl.lwjgl:lwjgl_util:2.9.4-nightly-20150209"
 }
 
 apply from: 'dependencies.gradle'
