publishing and dev fixes

--- a/gradle.properties
+++ b/gradle.properties
@@ -203,6 +203,9 @@ usesShadowedDependencies = false
 # default package
 remapStubs = false
 
+# Set this to true if you want to publish a proprietary mod without visible source code.
+#noPublishedSources =
+
 # Optional parameter to customize the produced artifacts. Use this to preserver artifact naming when migrating older
 # projects. New projects should not use this parameter.
 #customArchiveBaseName =
