--- a/gradle.properties
+++ b/gradle.properties
@@ -11,8 +11,15 @@ modGroup = com.myname.mymodid
 
 # In case your mod provides an API for other mods to implement you may declare its package here. Otherwise, you can
 # leave this property empty.
-# Example value: apiPackage = api + modGroup = com.myname.mymodid -> com.myname.mymodid.api
+# Example value: apiPackage = api
+# ... api + (modGroup -> com.myname.mymodid) -> com.myname.mymodid.api
 apiPackage =
+
+# Same thing, but for multi-poackage APIs, if said API packages cannot be easily split from internals.
+# Packages separated by semicolons
+# ExampleValue: apiPackages = foo;bar;baz
+# ... foo;bar;baz -> com.myname.mymodid.foo;com.myname.mymodid.bar;com.myname.mymodid.baz
+apiPackages =
 
 # WHY is there no version field?
 # The build script relies on git to provide a version via tags. It is super easy and will enable you to always know the
