--- a/gradle.properties
+++ b/gradle.properties
@@ -15,11 +15,14 @@ modGroup = com.myname.mymodid
 # ... api + (modGroup -> com.myname.mymodid) -> com.myname.mymodid.api
 apiPackage =
 
-# Same thing, but for multi-poackage APIs, if said API packages cannot be easily split from internals.
+# Same thing, but for multi-pockage APIs, if said API packages cannot be easily split from internals.
 # Packages separated by semicolons
 # ExampleValue: apiPackages = foo;bar;baz
 # ... foo;bar;baz -> com.myname.mymodid.foo;com.myname.mymodid.bar;com.myname.mymodid.baz
 apiPackages =
+
+# Same as apiPackages, but does not pull in inner packages
+apiPackagesNoRecurse =
 
 # WHY is there no version field?
 # The build script relies on git to provide a version via tags. It is super easy and will enable you to always know the
