--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-//version: 1656003793falsepattern71
+//version: 1656003793falsepattern72
 /*
 DO NOT CHANGE THIS FILE!
 
@@ -812,7 +812,7 @@ if (curseForgeProjectId != "" && System.getenv("CURSEFORGE_TOKEN") != null) {
     }
 
     if (usesMixins.toBoolean()) {
-        addCurseForgeRelation("requiredDependency", "gasstation")
+        addCurseForgeRelation("requiredDependency", "unimixins")
     }
     tasks.curseforge.dependsOn(build)
     tasks.publish.dependsOn(tasks.curseforge)
@@ -845,7 +845,7 @@ if (modrinthProjectId != "" && System.getenv("MODRINTH_TOKEN") != null) {
         }
     }
     if (usesMixins.toBoolean()) {
-        addModrinthDep("required", "project", "cdeAhgfp")
+        addModrinthDep("required", "project", "ghjoiQAl")
     }
     tasks.modrinth.dependsOn(build)
     tasks.publish.dependsOn(tasks.modrinth)
